Closed
Bug 19931
Opened 25 years ago
Closed 24 years ago
[REALPLAYER] Mac - RealAudio controls drawn on top of Sidebar
Categories
(Core Graveyard :: Plug-ins, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M17
People
(Reporter: elig, Assigned: peterl-retired)
References
()
Details
(Keywords: platform-parity, Whiteboard: [nsbeta2-])
Attachments
(2 files)
* TITLE/SUMMARY
[PP] Mac - RealAudio controls drawn on top of Sidebar & chrome
* STEPS TO REPRODUCE
0) Launch Apprunner
1) View either of the attached test cases (both invoke a real audio stream; one
via OBJECT, the other via EMBED.)
* RESULT
- What happened
Displaying either of the following, the RealAudio controls will be drawn on top
of the Sidebar, rather than in the content region.
a. <object data="http://www.wrn.org/audio/rus.ram" type="audio/ra" width=100
height=100>alternative text</object>
b. <EMBED TYPE="audio/x-pn-realaudio-plugin" SRC="http://www.wrn.org/audio/
rus.ram">
- What was expected
Controls drawn in page content region.
* REGRESSION
- Occurs On
Mac OS Mozilla (1999112308 Commercial optimized build, and 1999112208
Commercial optimized build)
- Doesn't Occur On
Win32 Apprunner (1999112208 optimized build [NT 4, Service Pack 5])
* CONFIGURATIONS TESTED
- [Mac] Beige Power Mac G3 (266 MHz PowerPC 750), 96 MB RAM (VM on; 1 MB of VM
used), 1024x768 (Thousands of Colors), Mac OS 8.6
- [Win32] Vectra VL (233 MHz P2), 96 MB RAM, 800x600 (True Color), NT 4.0 SP5.
- [Linux] Vectra VL (266 MHz P2), 96 MB RAM. Red Hat Linux 6.0 (GNOME).
Reporter | ||
Updated•25 years ago
|
Summary: [PP] Mac - RealAudio controls drawn on top of Sidebar → [PP][REALPLAYER] Mac - RealAudio controls drawn on top of Sidebar
Reporter | ||
Comment 1•25 years ago
|
||
Reporter | ||
Comment 2•25 years ago
|
||
Reporter | ||
Comment 3•25 years ago
|
||
Shrirang is now QA owner for Plug-ins; QA assigning all of my Plug-ins bugs over
to him.
Updated•25 years ago
|
Summary: [PP][REALPLAYER] Mac - RealAudio controls drawn on top of Sidebar → [REALPLAYER] Mac - RealAudio controls drawn on top of Sidebar
Comment 4•25 years ago
|
||
I still see this problem of realplayer getting drawn on top of the sidebar and
overlapping the toolbars. Also, realplayer controls appear transparent ie
toolbars at the back can be seen through the player. Voice is heard and the file
plays. Visit this link: http://slip/projects/marvin/plugins/realaudiotest1.html
Observe that the plugin does not obey the"<CENTER>" tag. It still appears on the
left corner of the page. This is not seen on windows.
Updated•25 years ago
|
Keywords: realplayer
Comment 5•25 years ago
|
||
This is still seen on mac(2000052208). Nominating for beta2.
Keywords: nsbeta2
Comment 7•24 years ago
|
||
Reassigning to Brian, who's kindly volunteered to take this on. Thanks Brian!
Assignee: av → bnesse
Status: ASSIGNED → NEW
Updated•24 years ago
|
Status: NEW → ASSIGNED
Comment 8•24 years ago
|
||
Recommending reconsideration of nsbeta2+ status on this bug.
Until yesterday, it was not possible to open the test cases due to real player
attempting to allocate memory (via NPN_MemAlloc) before the Memory Allocation
service was started. I have checked in a fix for this...
[/modules/plugin/nglsrc/ns4xPlugin.cpp (v1.33) r=av]
There a still a number of issues surrounding this, including the fact that none
of the test cases work correctly on the Mac under 4.7x much less in Mozilla. As I
have just achieved the ability to debug this last night, I can safely say that
there is no way it's going to be fixed in time for the deadline.
Whiteboard: [nsbeta2+]
Updated•24 years ago
|
Whiteboard: [nsbeta2-]
Comment 9•24 years ago
|
||
Putting on [nsbeta2-] radar. Not critical to beta2.
Comment 10•24 years ago
|
||
This bug is totally blocking the playing of realplayer on mac. I cannot even
touch the buttons on the player...and part of the player appears cut and over
the sidebar and does not even render correctly. I exhort this bug for nsbeta2+
reconsideration .
Comment 11•24 years ago
|
||
marc and bnesse will get together to find a possible compromise for this. May
nsbeta2+ if we can get a compromise.
Whiteboard: [nsbeta2-] → [NEED INFO]
Comment 12•24 years ago
|
||
Putting on [nsbeta2-] radar. Not critical to beta2. Renominate if you come to a
compromise marc and bnesse.
Whiteboard: [NEED INFO] → [nsbeta2-]
Comment 14•24 years ago
|
||
accepting bug.
Load up Shrir's testcase and resize the window. Notice the plugin does move to
the center of the screen after resize sometimes and other times gets clipped.
However, playing doesn't work (no audio) and the player is badly clipped at the
top. Looking at a dump of the frames and views, they appear to be correct in
comparison to the Win32 version.
Also, Shrir's testcase DOES work in Nav 4.x.
Status: NEW → ASSIGNED
Comment 15•24 years ago
|
||
nsbeta3 nomination ( trying once again..after failing beta2 nomination)
Comment 17•24 years ago
|
||
If you apply the patch to bug 49743 and bug 37126 (which activates the other
patch), Real almost works. There still seems to be a positioning and clipping
problem that I can only see in my Quicktime and Real testcases. There is an old
method (now removed) in nsObjectFrame called FixMacPluginWindow which when put
back in seems to fix this problem. I need to do some more investigation.
Also, it would be nice to get a RealPlayer test suite.
Comment 18•24 years ago
|
||
I checked in my fix to the branch and tip.
RealAudio should no longer be drawn on top of the sidebar. New RealAudio
problems should be reported in a seperate bug report.
Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 19•24 years ago
|
||
Verified that this is working speckless on mac branch build 2000092911. Adding
keyword :vtrunk to get verification on trunk (keeping bug resolved/fixed at
this moment).
Keywords: vtrunk
Comment 20•24 years ago
|
||
This is not fixed on the trunk. It wokrs the second time but the first time it
paints the real player over the sidebar and the navigation butons. Mousing over
the realplayer paints the navigation buttons and sidebar tab headers on top of
the real player. The second attempt loads the real player in the content area.
To reproduce I quit mozilla and restarted. Again, the first time I cliked on
teh RMBED testcase the real player was incorrectly positioned over the sidebar
and navigation controls. Tested with Mozilla 2000100208 trunk build on OS9.
Reopening
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 21•24 years ago
|
||
I just tried this today with a fresh pull from the trunk and it this problem
seems to have gone away. I don't understand how it could work for the branch but
not for the trunk when I checked the patch into both?????
Shrir or Asa, can you try this again and confirm?
Keywords: qawanted
Comment 22•24 years ago
|
||
I will try this on the trunk today...
Comment 23•24 years ago
|
||
This is fixed...for sure. I have yesterday's trunk build on mac (realplayer G2
plugin). Both the testcase url and EMBED testcase in this bug load fine and I
see no problems. I dunno what Asa saw...Am marking this VERIFIED.(2000100312).
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 25•24 years ago
|
||
this is not fixed. today's mac mozilla installer build 2000101908 on Mac OS9.
The first time I test the 11/23/99 EMBED testcase the controls are drawn on top
of the sidebar and browser navigation buttons.
http://slip/projects/marvin/plugins/realaudiotest1.html seems to work just fine.
If you would like to see this feel free to come to my cube in bldg 22 2nd floor.
Comment 26•24 years ago
|
||
Pls install realplayer 8 basic (free,latest) and try this and if then it does
not work,feel free to reopen.
Comment 27•24 years ago
|
||
OK, my apologies. It was failing with an older realplayer but works fine with
RealPlayer 8. Removing vtrunk keyword. Verified with Mozilla Trunk mac build
102312 Mac OS9
Keywords: vtrunk
Updated•3 years ago
|
Product: Core → Core Graveyard
Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•