Moved code which was initalizing the memory allocation service from the constructor into the CreatePlugin function because it wasn't being called early enough for some plugins. Need to proceed on Bug 19931. r=av.